k8s/milli-prod/prometheus-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx-internal
    nginx.ingress.kubernetes.io/auth-url: "https://auth.us-east-1.prod.milli-bank.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.us-east-1.prod.milli-bank.com/oauth2/start?rd=https%3A%2F%2F$host$request_uri"
spec:
  tls:
  - hosts:
    - grafana.us-east-1.prod.milli-bank.com
    secretName: grafana-tls
  rules:
  - host: grafana.us-east-1.prod.milli-bank.com
    http:
      paths:
      - path: /avatar/
        backend:
          serviceName: does-not-exist
          servicePort: 80
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx-internal
    nginx.ingress.kubernetes.io/auth-url: "https://auth.us-east-1.prod.milli-bank.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.us-east-1.prod.milli-bank.com/oauth2/start?rd=https%3A%2F%2F$host$request_uri"
spec:
  tls:
  - hosts:
    - prometheus.us-east-1.prod.milli-bank.com
    secretName: prometheus-tls
  rules:
  - host: prometheus.us-east-1.prod.milli-bank.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-k8s
          servicePort: 9090
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx-internal
    nginx.ingress.kubernetes.io/auth-url: "https://auth.us-east-1.prod.milli-bank.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.us-east-1.prod.milli-bank.com/oauth2/start?rd=https%3A%2F%2F$host$request_uri"
spec:
  tls:
  - hosts:
    - alertmanager.us-east-1.prod.milli-bank.com
    secretName: alertmanager-tls
  rules:
  - host: alertmanager.us-east-1.prod.milli-bank.com
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-main
          servicePort: 9093
