k8s/milli-prod/tekton-custom.yaml
### The following resources are provided with fake data in order to prevent them from running on prod
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx-internal
    nginx.ingress.kubernetes.io/auth-signin: https://auth.us-east-1.prod.milli-bank.com/oauth2/start?rd=https%3A%2F%2F$host$request_uri
    nginx.ingress.kubernetes.io/auth-url: https://auth.us-east-1.prod.milli-bank.com/oauth2/auth
spec:
  tls:
  - secretName: tekton-dashboard-tls
    hosts:
    - tekton.us-east-1.prod.milli-bank.com
  rules:
  - host: tekton.us-east-1.prod.milli-bank.com
    http:
      paths:
      - backend:
          serviceName: tekton-dashboard
          servicePort: 9097
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: infra-cd-prod
  namespace: tekton-pipelines
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-external
spec:
  tls:
  - hosts:
    - infra-cd-prod.us-east-1.prod.milli-bank.com
    secretName: infra-cd-prod-tls
  rules:
  - host: infra-cd-prod.us-east-1.prod.milli-bank.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: el-infra-cd-prod
          servicePort: 8080
