k8s/milli-prod/tekton-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-external
  name: infra-cd-prod
  namespace: tekton-pipelines
spec:
  rules:
  - host: infra-cd-prod.fakebank.com
    http:
      paths:
      - backend:
          serviceName: el-infra-cd-prod
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - infra-cd-prod.fakebank.com
    secretName: infra-cd-prod-tls
